ui and functional updates

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Learn &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Equinox</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -71,7 +71,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-right">
-						<p class="num">Call: +01 123 456 7890</p>
+						<a class="name-style" href="https://wa.me/+919754530845" >Whatsapp Now: +91 975 453 0845</a>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-dribbble"></i></a></li>
@@ -91,7 +91,7 @@
 						<ul>
 							<li class="btn-cta active "><a href="index.html"><span>Home</span></a></li>
 							<li class="btn-cta"><a href="courses.html"><span>Courses</span></a></li>
-							<li class="btn-cta" ><a href="pricing.html"><span>About</span></a></li>
+							<li class="btn-cta" ><a href="about.html"><span>About</span></a></li>
 							<li class="has-dropdown btn-cta">
 								<a href="blog.html"><span>Resources</span></a>
 								<ul class="dropdown">
@@ -116,7 +116,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Contact Us</h1>
-							<h2>Get mentored now by <a class="name-style" href="http://freehtml5.co/" target="_blank">CA Samarth Singh</a></h2>
+							<h2>Get mentored now by <a class="name-style" href="about.html" >CA Samarth Singh</a></h2>
 						</div>
 					</div>
 				</div>
