--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Learn &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Equinox</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -71,7 +71,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-right">
-						<p class="num">Call: +01 123 456 7890</p>
+						<a class="name-style" href="https://wa.me/+919754530845" >Whatsapp Now: +91 975 453 0845</a>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-dribbble"></i></a></li>
@@ -91,7 +91,7 @@
 						<ul>
 							<li class="btn-cta active "><a href="index.html"><span>Home</span></a></li>
 							<li class="btn-cta"><a href="courses.html"><span>Courses</span></a></li>
-							<li class="btn-cta" ><a href="pricing.html"><span>About</span></a></li>
+							<li class="btn-cta" ><a href="about.html"><span>About</span></a></li>
 							<li class="has-dropdown btn-cta">
 								<a href="blog.html"><span>Resources</span></a>
 								<ul class="dropdown">
@@ -116,8 +116,8 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Pricing Plan</h1>
-							<h2>Get mentored now by <a class="name-style" href="http://freehtml5.co/" target="_blank">CA Samarth Singh</a></h2>
+							<h1>About Equinox</h1>
+							<h2>Get mentored now by <a class="name-style" href="#" >CA Samarth Singh</a></h2>
 						</div>
 					</div>
 				</div>
@@ -125,81 +125,7 @@
 		</div>
 	</header>
 
-	<div id="fh5co-pricing">
-		<div class="container">
-			<div class="row">
-				<div class="pricing">
-					<div class="col-md-3 animate-box">
-						<div class="price-box">
-							<h2 class="pricing-plan">Starter</h2>
-							<div class="price"><sup class="currency">$</sup>9<small>/month</small></div>
-							<ul class="classes">
-								<li>15 English 101</li>
-								<li class="color">10 Web Development</li>
-								<li>10 Yoga Classes</li>
-								<li class="color">20 Virtual Assistant</li>
-								<li>10 System Analyst</li>
-								<li class="color">5 WordPress</li>
-								<li>10 Programming</li>
-							</ul>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
-						</div>
-					</div>
-
-					<div class="col-md-3 animate-box">
-						<div class="price-box">
-							<h2 class="pricing-plan">Basic</h2>
-							<div class="price"><sup class="currency">$</sup>27<small>/month</small></div>
-							<ul class="classes">
-								<li>15 English 101</li>
-								<li class="color">10 Web Development</li>
-								<li>10 Yoga Classes</li>
-								<li class="color">20 Virtual Assistant</li>
-								<li>10 System Analyst</li>
-								<li class="color">5 WordPress</li>
-								<li>10 Programming</li>
-							</ul>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
-						</div>
-					</div>
-
-					<div class="col-md-3 animate-box">
-						<div class="price-box popular">
-							<h2 class="pricing-plan pricing-plan-offer">Pro <span>Best Offer</span></h2>
-							<div class="price"><sup class="currency">$</sup>74<small>/month</small></div>
-							<ul class="classes">
-								<li>15 English 101</li>
-								<li class="color">10 Web Development</li>
-								<li>10 Yoga Classes</li>
-								<li class="color">20 Virtual Assistant</li>
-								<li>10 System Analyst</li>
-								<li class="color">5 WordPress</li>
-								<li>10 Programming</li>
-							</ul>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
-						</div>
-					</div>
-
-					<div class="col-md-3 animate-box">
-						<div class="price-box">
-							<h2 class="pricing-plan">Unlimited</h2>
-							<div class="price"><sup class="currency">$</sup>140<small>/month</small></div>
-							<ul class="classes">
-								<li>15 English 101</li>
-								<li class="color">10 Web Development</li>
-								<li>10 Yoga Classes</li>
-								<li class="color">20 Virtual Assistant</li>
-								<li>10 System Analyst</li>
-								<li class="color">5 WordPress</li>
-								<li>10 Programming</li>
-							</ul>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	
 	
 	<div id="fh5co-started" style="background-image:url(images/img_bg_2.jpg);">
 		<div class="overlay"></div>
