--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Equinox &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Equinox</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -71,7 +71,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-right">
-						<p class="num">Call: +01 123 456 7890</p>
+						<a class="name-style" href="https://wa.me/+919754530845" >Whatsapp Now: +91 975 453 0845</a>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-dribbble"></i></a></li>
@@ -91,7 +91,7 @@
 						<ul>
 							<li class="btn-cta active "><a href="index.html"><span>Home</span></a></li>
 							<li class="btn-cta"><a href="courses.html"><span>Courses</span></a></li>
-							<li class="btn-cta" ><a href="pricing.html"><span>About</span></a></li>
+							<li class="btn-cta" ><a href="about.html"><span>About</span></a></li>
 							<li class="has-dropdown btn-cta">
 								<a href="blog.html"><span>Resources</span></a>
 								<ul class="dropdown">
@@ -117,15 +117,15 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Unleash the Power of Stock Market</h1>
-							<h2>Get mentored now by <a class="name-style" href="http://freehtml5.co/" target="_blank">CA Samarth Singh</a></h2>
-							<p><a class="btn btn-primary btn-lg btn-learn" href="#">Take A Course</a> <a class="btn btn-primary btn-lg popup-vimeo btn-video" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play"></i> Watch Video</a></p>
+							<h2>Get mentored now by <a class="name-style" href="about.html" >CA Samarth Singh</a></h2>
+							<p><a class="btn btn-primary btn-lg btn-learn" href="#">Take A Course</a> <a class="btn btn-primary btn-lg popup-youtube btn-video" href="https://www.youtube.com/watch?v=nWU4Flpj4ZU&ab_channel=LearnApp"><i class="icon-play"></i> Watch Video</a></p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</header>
-
+	<!---
 	<div id="fh5co-counter" class="fh5co-counters">
 		<div class="container">
 			<div class="row">
@@ -148,6 +148,7 @@
 			</div>
 		</div>
 	</div>
+	-->
 
 	<div id="fh5co-explore" class="fh5co-bg-section">
 		<div class="container">
@@ -164,36 +165,36 @@
 				<div class="text-center bs-wizard-stepnum"><h4>Step 1</h4></div>
 				<div class="progress"><div class="progress-bar"></div></div>
 				<a href="#" class="bs-wizard-dot"></a>
-				<div class="bs-wizard-info text-center"><p>Create A Free Course</p></div>
+				<div class="bs-wizard-info text-center"><p>Subscribe to Basic stock market course</p></div>
 			</div>
 
 			<div class="col-xs-2 bs-wizard-step complete"><!-- complete -->
 				<div class="text-center bs-wizard-stepnum"><h4>Step 2</h4></div>
 				<div class="progress"><div class="progress-bar"></div></div>
 				<a href="#" class="bs-wizard-dot"></a>
-				<div class="bs-wizard-info text-center"><p>Upload Content</p></div>
+				<div class="bs-wizard-info text-center"><p>Give screening test for advance level mentorship</p></div>
 			</div>
 
 			<div class="col-xs-2 bs-wizard-step complete"><!-- complete -->
 				<div class="text-center bs-wizard-stepnum"><h4>Step 3</h4></div>
 				<div class="progress"><div class="progress-bar"></div></div>
 				<a href="#" class="bs-wizard-dot"></a>
-				<div class="bs-wizard-info text-center"><p>Make Your Course Beautiful</p></div>
+				<div class="bs-wizard-info text-center"><p>Attend live lectures</p></div>
 			</div>
 
-			<div class="col-xs-2 bs-wizard-step complete"><!-- active -->
+			<div class="col-xs-2 bs-wizard-step complete"><!-- complete -->
 				<div class="text-center bs-wizard-stepnum"><h4>Step 4</h4></div>
 				<div class="progress"><div class="progress-bar"></div></div>
 				<a href="#" class="bs-wizard-dot"></a>
-				<div class="bs-wizard-info text-center"><p>Start Making Money</p></div>
+				<div class="bs-wizard-info text-center"><p>Appear in test and discuss in doubt clearing session</p></div>
 			</div>
-			<div class="col-xs-2 bs-wizard-step complete"><!-- active -->
+			<div class="col-xs-2 bs-wizard-step complete"><!-- complete -->
 				<div class="text-center bs-wizard-stepnum"><h4>Step 5</h4></div>
 				<div class="progress"><div class="progress-bar"></div></div>
 				<a href="#" class="bs-wizard-dot"></a>
-				<div class="bs-wizard-info text-center"><p>Start Making Money</p></div>
+				<div class="bs-wizard-info text-center"><p>Assess your performance in live market</p></div>
 			</div>
-			<div class="col-xs-2 bs-wizard-step complete"><!-- active -->
+			<div class="col-xs-2 bs-wizard-step complete"><!-- complete -->
 				<div class="text-center bs-wizard-stepnum"><h4>Step 6</h4></div>
 				<div class="progress"><div class="progress-bar"></div></div>
 				<a href="#" class="bs-wizard-dot"></a>
@@ -205,7 +206,7 @@
 				<div class="row">
 					<div class="col-md-6 col-md-push-6  animate-box">
 						<div class="mt">
-							<h3>Our Teaching freamework </h3>
+							<h3>Our Teaching framework </h3>
 							<ul class="list-nav">
 								<li><i class="icon-check2"></i>Price Volume analysis – The only thing you need to know to be successful trader</li>
 								<li><i class="icon-check2"></i>Data Driven Methodology – PV Combined with fundamental data points to get more accuracy</li>
@@ -213,7 +214,7 @@
 							</ul>
 
 
-							<p><a class="btn btn-primary btn-lg popup-vimeo btn-video" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play"></i> Buy Now</a></p>
+							<p><a class="btn btn-primary btn-lg popup-youtube btn-video" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play"></i> Buy Now</a></p>
 						</div>
 					</div>
 					<div class="col-md-6 col-md-pull-6 animate-box">
@@ -231,7 +232,7 @@
 							</ul>
 
 
-							<p><a class="btn btn-primary btn-lg popup-vimeo btn-video" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play"></i> Buy Now</a></p>
+							<p><a class="btn btn-primary btn-lg popup-youtube btn-video" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play"></i> Buy Now</a></p>
 						</div>
 					</div>
 				</div>
