--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-right">
-						<a class="name-style" href="https://wa.me/+919754530845" >Whatsapp Now: +91 975 453 0845</a>
+						<a class="name-style" href="https://wa.me/+919754530845" target="_blank">Whatsapp Now: +91 975 453 0845</a>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-dribbble"></i></a></li>
