--- a/courses.html
+++ b/courses.html
@@ -74,7 +74,7 @@
 						<a class="name-style" href="https://wa.me/+919754530845" target="_blank">Whatsapp Now: +91 975 453 0845</a>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<li><a href="#"><i class="icon-instagram"></i></a></li>
 							<li><a href="#"><i class="icon-github"></i></a></li>
 						</ul>
 					</div>
