--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
+	<script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
@@ -74,7 +75,7 @@
 						<a class="name-style" href="https://wa.me/+919754530845" target="_blank">Whatsapp Now: +91 975 453 0845</a>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<li><a href="#"><i class="icon-instagram"></i></a></li>
 							<li><a href="#"><i class="icon-github"></i></a></li>
 						</ul>
 					</div>
@@ -201,6 +202,152 @@
 				<div class="bs-wizard-info text-center"><p>Start Making Money</p></div>
 			</div>
 		</div>
+
+		<div class="mission-container m-50 p-50">
+			  <div class="mission">
+				<div class="col-md-4 col-sm-6 mission-point">
+					<div class="mission-point-inner">
+						<div class="mission-headers">
+							<lord-icon
+								src="https://cdn.lordicon.com/ttioogfl.json"
+								trigger="loop"
+								style="width:100px;height:100px">
+							</lord-icon>
+							<span class="mission-title">Education </span>
+						</div>
+						
+						<div class="mission-content">
+						To Impart quality education in the youth through establishing, maintaining and running Schools, Colleges, Social service centres, Industrial Training centre
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 mission-point ">
+					<div class="mission-point-inner">
+						<div class="mission-headers">
+							<lord-icon
+								src="https://cdn.lordicon.com/tdxlyuid.json"
+								trigger="loop"
+								style="width:100px;height:100px">
+							</lord-icon>
+							<span class="mission-title">Science and Technology</span>
+						</div>
+						<div class="mission-content">
+							To strive for promotion of education and learning in all branches more specifically in Science and Technology.
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 mission-point">
+					<div class="mission-point-inner">
+						<div class="mission-headers">
+							<lord-icon
+								src="https://cdn.lordicon.com/etqbfrgp.json"
+								colors="outline:#131432,primary:#4bb3fd,secondary:#4bb3fd,tertiary:#b26836,quaternary:#ebe6ef"
+								trigger="loop"
+								style="width:100px;height:100px">
+							</lord-icon>
+							<span class="mission-title">Social</span>
+						</div>
+						<div class="mission-content">
+							To work for the rural empowerment and upliftment on various fronts like social, cultural, economic etc.
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 mission-point">
+					<div class="mission-point-inner">
+						<div class="mission-headers">
+							<lord-icon
+								src="https://cdn.lordicon.com/vtovymqf.json"
+								trigger="loop"
+								style="width:100px;height:100px">
+							</lord-icon>
+							<span class="mission-title">Women Empowerment</span>
+						</div>
+						<div class="mission-content">
+							To establish, run & manage institution for women empowerment and make them independent socially, financially and emotionally.
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 mission-point">
+					<div class="mission-point-inner">
+						<div class="mission-headers">
+							<lord-icon
+								src="https://cdn.lordicon.com/eoabunbr.json"
+								trigger="loop"
+								style="width:100px;height:100px">
+							</lord-icon>
+							<span class="mission-title">Health Centres</span>
+						</div>
+						<div class="mission-content">
+							To establish, run & manage institution for Health and Medical Awareness in Primary Health Centres and other health establishments.
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 mission-point">
+					<div class="mission-point-inner">
+						<div class="mission-headers">
+							<lord-icon
+								src="https://cdn.lordicon.com/dmibloap.json"
+								trigger="loop"
+								style="width:120px;height:100px">
+							</lord-icon>
+							<span class="mission-title">Water Resources</span>
+						</div>
+						<div class="mission-content">
+							To establish, run & manage institution for cleanliness awareness and water resources management and other environmental aspects.
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 mission-point">
+					<div class="mission-point-inner">
+						<div class="mission-headers">
+							<lord-icon
+								src="https://cdn.lordicon.com/hatrfdfo.json"
+								trigger="loop"
+								style="width:100px;height:100px">
+							</lord-icon>
+							<span class="mission-title">Disaster Management</span>
+						</div>
+						<div class="mission-content">
+							To establish, run & manage institution for natural and artificial disaster management, emergency management.
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 mission-point">
+					<div class="mission-point-inner">
+						<div class="mission-headers">
+							<lord-icon
+								src="https://cdn.lordicon.com/hqrgkqvs.json"
+								colors="outline:#121331,primary:#4bb3fd,secondary:#ebe6ef"
+								trigger="loop"
+								style="width:100px;height:100px">
+							</lord-icon>
+							<span class="mission-title">Welfare Schemes</span>
+						</div>
+						<div class="mission-content">
+							To establish, run & manage institution for making assessable the Welfare schemes for vulnerable sections of the population by the Centre and States.
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 mission-point">
+					<div class="mission-point-inner">
+						<div class="mission-headers">
+							<lord-icon
+								src="https://cdn.lordicon.com/hbwqfgcf.json"
+								trigger="loop"
+								style="width:100px;height:100px">
+							</lord-icon>
+							<span class="mission-title">Decent Work and Economic Growth</span>
+						</div>
+						<div class="mission-content">
+							to provide a helping hand for the reduction of poverty and hunger of india.
+							after good education they can complete in this new era of skilled works rather than unskilled physical work
+						</div>
+					</div>
+				</div>
+			  </div>
+		</div>
+
+
 		<div class="fh5co-explore fh5co-explore1">
 			<div class="container">
 				<div class="row">
@@ -212,9 +359,6 @@
 								<li><i class="icon-check2"></i>Data Driven Methodology – PV Combined with fundamental data points to get more accuracy</li>
 								<li><i class="icon-check2"></i>Improved trading psychology –   I believe with right sets of tools & correct knowledge we develop logic that enhances our cognitive abilities which in turn sculpts our trading psychology.</li>
 							</ul>
-
-
-							<p><a class="btn btn-primary btn-lg popup-youtube btn-video" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play"></i> Buy Now</a></p>
 						</div>
 					</div>
 					<div class="col-md-6 col-md-pull-6 animate-box">
@@ -230,15 +374,20 @@
 								<li><i class="icon-check2"></i>Chart analysis based on Price & Volume</li>
 								<li><i class="icon-check2"></i>Macro & Micro chart analysis</li>
 							</ul>
-
-
-							<p><a class="btn btn-primary btn-lg popup-youtube btn-video" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play"></i> Buy Now</a></p>
 						</div>
+					</div>
+
+					<div class="col-md-12">
+						<div class="col-md-5 "></div>
+						<div class="col-md-2">
+						<a class="btn btn-primary btn-lg popup-youtube btn-video" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play"></i> Buy Now</a>
+						</div>
+						<div class="col-md-5"></div>
 					</div>
 				</div>
 			</div>
 		</div>
-
+		<!---
 		<div class="fh5co-explore">
 			<div class="container">
 				<div class="row">
@@ -263,7 +412,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div>-->
 	</div>
 	
 	<div id="fh5co-project">
