--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 				</div>
 			</div>
-		</div>		
+		</div>	
+		<!--
 		<div class="row bs-wizard animate-box" style="border-bottom:0;">
                 
 			<div class="col-xs-2 bs-wizard-step complete">
@@ -169,40 +170,40 @@
 				<div class="bs-wizard-info text-center"><p>Subscribe to Basic stock market course</p></div>
 			</div>
 
-			<div class="col-xs-2 bs-wizard-step complete"><!-- complete -->
+			<div class="col-xs-2 bs-wizard-step complete">
 				<div class="text-center bs-wizard-stepnum"><h4>Step 2</h4></div>
 				<div class="progress"><div class="progress-bar"></div></div>
 				<a href="#" class="bs-wizard-dot"></a>
 				<div class="bs-wizard-info text-center"><p>Give screening test for advance level mentorship</p></div>
 			</div>
 
-			<div class="col-xs-2 bs-wizard-step complete"><!-- complete -->
+			<div class="col-xs-2 bs-wizard-step complete">
 				<div class="text-center bs-wizard-stepnum"><h4>Step 3</h4></div>
 				<div class="progress"><div class="progress-bar"></div></div>
 				<a href="#" class="bs-wizard-dot"></a>
 				<div class="bs-wizard-info text-center"><p>Attend live lectures</p></div>
 			</div>
 
-			<div class="col-xs-2 bs-wizard-step complete"><!-- complete -->
+			<div class="col-xs-2 bs-wizard-step complete">
 				<div class="text-center bs-wizard-stepnum"><h4>Step 4</h4></div>
 				<div class="progress"><div class="progress-bar"></div></div>
 				<a href="#" class="bs-wizard-dot"></a>
 				<div class="bs-wizard-info text-center"><p>Appear in test and discuss in doubt clearing session</p></div>
 			</div>
-			<div class="col-xs-2 bs-wizard-step complete"><!-- complete -->
+			<div class="col-xs-2 bs-wizard-step complete">
 				<div class="text-center bs-wizard-stepnum"><h4>Step 5</h4></div>
 				<div class="progress"><div class="progress-bar"></div></div>
 				<a href="#" class="bs-wizard-dot"></a>
 				<div class="bs-wizard-info text-center"><p>Assess your performance in live market</p></div>
 			</div>
-			<div class="col-xs-2 bs-wizard-step complete"><!-- complete -->
+			<div class="col-xs-2 bs-wizard-step complete">
 				<div class="text-center bs-wizard-stepnum"><h4>Step 6</h4></div>
 				<div class="progress"><div class="progress-bar"></div></div>
 				<a href="#" class="bs-wizard-dot"></a>
 				<div class="bs-wizard-info text-center"><p>Start Making Money</p></div>
 			</div>
 		</div>
-
+		-->	
 		<div class="mission-container m-50 p-50">
 			  <div class="mission">
 				<div class="col-md-4 col-sm-6 mission-point">
