--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Take A Course</h2>
+					<h2>6 STEPS MENTORING</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 				</div>
 			</div>
@@ -210,15 +210,18 @@
 					<div class="mission-point-inner">
 						<div class="mission-headers">
 							<lord-icon
-								src="https://cdn.lordicon.com/ttioogfl.json"
+								src="https://cdn.lordicon.com/igrslveu.json"
 								trigger="loop"
 								style="width:100px;height:100px">
 							</lord-icon>
-							<span class="mission-title">Education </span>
+							<span class="mission-title">STEP 1</span>
+							<div class="mission-content-div"></div>
 						</div>
 						
 						<div class="mission-content">
-						To Impart quality education in the youth through establishing, maintaining and running Schools, Colleges, Social service centres, Industrial Training centre
+							<center>  <h4>Subscribe to Basic stock market course</h4> </center>
+							<hr>
+							This course introduces you with framework of stock market and the prerequisites of trading. 
 						</div>
 					</div>
 				</div>
@@ -230,10 +233,13 @@
 								trigger="loop"
 								style="width:100px;height:100px">
 							</lord-icon>
-							<span class="mission-title">Science and Technology</span>
+							<span class="mission-title">STEP 2</span>
+							<div class="mission-content-div"></div>
 						</div>
 						<div class="mission-content">
-							To strive for promotion of education and learning in all branches more specifically in Science and Technology.
+							<center>  <h4>Give screening test for advance level mentorship</h4> </center>
+							<hr>
+							Test allows you to evaluate your current level of competency for stock market and your learnability for advance mentorship program
 						</div>
 					</div>
 				</div>
@@ -241,15 +247,17 @@
 					<div class="mission-point-inner">
 						<div class="mission-headers">
 							<lord-icon
-								src="https://cdn.lordicon.com/etqbfrgp.json"
-								colors="outline:#131432,primary:#4bb3fd,secondary:#4bb3fd,tertiary:#b26836,quaternary:#ebe6ef"
+								src="https://cdn.lordicon.com/zpxybbhl.json"
 								trigger="loop"
 								style="width:100px;height:100px">
 							</lord-icon>
-							<span class="mission-title">Social</span>
+							<span class="mission-title">STEP 3</span>
+							<div class="mission-content-div"></div>
 						</div>
 						<div class="mission-content">
-							To work for the rural empowerment and upliftment on various fronts like social, cultural, economic etc.
+							<center>  <h4>Attend live lectures</h4> </center>
+							<hr>
+							After opting for advance course you are fascilitated with live lectures and recorded lessons to enable in-depth understanding of integral elements to master technical analysis of stock market
 						</div>
 					</div>
 				</div>
@@ -261,10 +269,13 @@
 								trigger="loop"
 								style="width:100px;height:100px">
 							</lord-icon>
-							<span class="mission-title">Women Empowerment</span>
+							<span class="mission-title">STEP 4</span>
+							<div class="mission-content-div"></div>
 						</div>
 						<div class="mission-content">
-							To establish, run & manage institution for women empowerment and make them independent socially, financially and emotionally.
+							<center>  <h4>Appear in test and discuss in doubt clearing session</h4> </center>
+							<hr>
+							Assess your performance in tests after each lesson and discuss all your doubts 'live' with your mentor in doubt resolution sessions.
 						</div>
 					</div>
 				</div>
@@ -276,10 +287,13 @@
 								trigger="loop"
 								style="width:100px;height:100px">
 							</lord-icon>
-							<span class="mission-title">Health Centres</span>
+							<span class="mission-title">STEP 5</span>
+							<div class="mission-content-div"></div>
 						</div>
 						<div class="mission-content">
-							To establish, run & manage institution for Health and Medical Awareness in Primary Health Centres and other health establishments.
+							<center> <h4>Assess your performance in live market</h4> </center>
+							<hr>
+							This is where you test your metal. You'll spend an entire day trading in the live market and submit final report to your mentor for detailed assessment
 						</div>
 					</div>
 				</div>
@@ -291,57 +305,13 @@
 								trigger="loop"
 								style="width:120px;height:100px">
 							</lord-icon>
-							<span class="mission-title">Water Resources</span>
+							<span class="mission-title">STEP 6</span>
+							<div class="mission-content-div"></div>
 						</div>
 						<div class="mission-content">
-							To establish, run & manage institution for cleanliness awareness and water resources management and other environmental aspects.
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 col-sm-6 mission-point">
-					<div class="mission-point-inner">
-						<div class="mission-headers">
-							<lord-icon
-								src="https://cdn.lordicon.com/hatrfdfo.json"
-								trigger="loop"
-								style="width:100px;height:100px">
-							</lord-icon>
-							<span class="mission-title">Disaster Management</span>
-						</div>
-						<div class="mission-content">
-							To establish, run & manage institution for natural and artificial disaster management, emergency management.
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 col-sm-6 mission-point">
-					<div class="mission-point-inner">
-						<div class="mission-headers">
-							<lord-icon
-								src="https://cdn.lordicon.com/hqrgkqvs.json"
-								colors="outline:#121331,primary:#4bb3fd,secondary:#ebe6ef"
-								trigger="loop"
-								style="width:100px;height:100px">
-							</lord-icon>
-							<span class="mission-title">Welfare Schemes</span>
-						</div>
-						<div class="mission-content">
-							To establish, run & manage institution for making assessable the Welfare schemes for vulnerable sections of the population by the Centre and States.
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 col-sm-6 mission-point">
-					<div class="mission-point-inner">
-						<div class="mission-headers">
-							<lord-icon
-								src="https://cdn.lordicon.com/hbwqfgcf.json"
-								trigger="loop"
-								style="width:100px;height:100px">
-							</lord-icon>
-							<span class="mission-title">Decent Work and Economic Growth</span>
-						</div>
-						<div class="mission-content">
-							to provide a helping hand for the reduction of poverty and hunger of india.
-							after good education they can complete in this new era of skilled works rather than unskilled physical work
+							<center> <h4 >Start Making Money</h4> </center>
+							<hr>
+							Hack the dimentions of your money game and live finacially free life.
 						</div>
 					</div>
 				</div>
